--- a/data_exploration/profile_posts_analysis.ipynb
+++ b/data_exploration/profile_posts_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -308,10 +308,21 @@
       "dtypes: bool(4), float64(3), int64(9), object(10)\n",
       "memory usage: 2.4+ MB\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "3721"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.info()"
+    "df.info()\n",
+    "len(df['main_ID'].unique())"
    ]
   },
   {
