Include trends and sentiment

--- a/skincare/scripts/test.ipynb
+++ b/skincare/scripts/test.ipynb
@@ -2,36 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "02afbf2c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/rx/4hst61c96_bfm0gnxrq_5w_h0000gn/T/ipykernel_13890/2303923901.py:4: DtypeWarning: Columns (17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"../../data/comments_posts_transcripts.csv\")\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "df = pd.read_csv(\"../../data/df_posts_transcripts.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "4b1b45ef",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array(['de', 'en'], dtype=object)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['textLanguage'].unique()"
+    "df = pd.read_csv(\"../../data/comments_posts_transcripts.csv\")"
    ]
   },
   {
