Change prompt and remove brand comments

--- a/notebooks/topics.ipynb
+++ b/notebooks/topics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "659d1a13",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "8531246b",
    "metadata": {},
    "outputs": [
@@ -46,6 +46,7 @@
        "      <th>Topic</th>\n",
        "      <th>Name</th>\n",
        "      <th>Count</th>\n",
+       "      <th>Keywords</th>\n",
        "      <th>Examples</th>\n",
        "      <th>NormName</th>\n",
        "      <th>negative_share</th>\n",
@@ -57,204 +58,194 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-1</td>\n",
-       "      <td>Love skincare</td>\n",
-       "      <td>586</td>\n",
-       "      <td>[\"Azelaic Acid 15% and Tazarotene Cream .05% f...</td>\n",
-       "      <td>love skincare</td>\n",
+       "      <td>acne</td>\n",
+       "      <td>710</td>\n",
+       "      <td>skin love acne serum acid hair routine skincar...</td>\n",
+       "      <td>['I used to use the good molecules serum but I...</td>\n",
+       "      <td>acne</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>acne prone skin</td>\n",
-       "      <td>54</td>\n",
-       "      <td>['Hei God! You gave me oily acne-prone skin bu...</td>\n",
-       "      <td>acne prone skin</td>\n",
-       "      <td>0.574074</td>\n",
-       "      <td>0.185185</td>\n",
-       "      <td>0.240741</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Shelby foundation</td>\n",
+       "      <td>53</td>\n",
+       "      <td>makeup rhode live concealer wearing girls cats...</td>\n",
+       "      <td>['How does the bubble perform under makeup? ( ...</td>\n",
+       "      <td>shelby foundation</td>\n",
+       "      <td>0.283019</td>\n",
+       "      <td>0.245283</td>\n",
+       "      <td>0.471698</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Asmr</td>\n",
-       "      <td>54</td>\n",
-       "      <td>['ASMR has me hooked! What’s your favorite typ...</td>\n",
-       "      <td>asmr</td>\n",
-       "      <td>0.314815</td>\n",
-       "      <td>0.185185</td>\n",
-       "      <td>0.500000</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Double cleansing</td>\n",
+       "      <td>41</td>\n",
+       "      <td>cleanser oil soap wash oil cleanser double cle...</td>\n",
+       "      <td>['Try an oil cleanser, then the gel or foam cl...</td>\n",
+       "      <td>double cleansing</td>\n",
+       "      <td>0.341463</td>\n",
+       "      <td>0.317073</td>\n",
+       "      <td>0.341463</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Instagram collaboration</td>\n",
-       "      <td>50</td>\n",
-       "      <td>['Hi pretty ! 🎀I’m Eliza from SAGAJEWELS marke...</td>\n",
-       "      <td>instagram collaboration</td>\n",
-       "      <td>0.020000</td>\n",
-       "      <td>0.180000</td>\n",
-       "      <td>0.800000</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Milky toner</td>\n",
+       "      <td>39</td>\n",
+       "      <td>sunscreen milky toner milky spf byoma toner ro...</td>\n",
+       "      <td>['Is it just me or the beauty of joseon sunscr...</td>\n",
+       "      <td>milky toner</td>\n",
+       "      <td>0.358974</td>\n",
+       "      <td>0.282051</td>\n",
+       "      <td>0.358974</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Oily skin</td>\n",
-       "      <td>31</td>\n",
-       "      <td>['This really only works for normal skin types...</td>\n",
-       "      <td>oily skin</td>\n",
-       "      <td>0.419355</td>\n",
-       "      <td>0.387097</td>\n",
-       "      <td>0.193548</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
        "      <td>6</td>\n",
-       "      <td>Sunscreen myths</td>\n",
-       "      <td>32</td>\n",
-       "      <td>[\"I always like to know how things smell. But ...</td>\n",
-       "      <td>sunscreen myths</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>0.187500</td>\n",
-       "      <td>0.437500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>7</td>\n",
-       "      <td>Clay mask</td>\n",
-       "      <td>33</td>\n",
-       "      <td>['Collagen cannot be absorbed into the skin be...</td>\n",
-       "      <td>clay mask</td>\n",
-       "      <td>0.393939</td>\n",
-       "      <td>0.242424</td>\n",
-       "      <td>0.363636</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>8</td>\n",
-       "      <td>Serum cream</td>\n",
-       "      <td>30</td>\n",
-       "      <td>['Rhode makes amazing skincare. All their prod...</td>\n",
-       "      <td>serum cream</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>0.266667</td>\n",
-       "      <td>0.566667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>9</td>\n",
-       "      <td>Beauty tips</td>\n",
+       "      <td>Beauty products</td>\n",
        "      <td>29</td>\n",
-       "      <td>['Ich liebe die Creme😍hab die auch.', 'Woher b...</td>\n",
-       "      <td>beauty tips</td>\n",
+       "      <td>ich die das und den auch liebe mit mir nicht</td>\n",
+       "      <td>['Ich liebe die Creme😍hab die auch.', 'Hat bei...</td>\n",
+       "      <td>beauty products</td>\n",
        "      <td>0.241379</td>\n",
        "      <td>0.241379</td>\n",
        "      <td>0.517241</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>5</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Setting spray</td>\n",
+       "      <td>23</td>\n",
+       "      <td>spray setting scent setting spray day micellar...</td>\n",
+       "      <td>['You’re going to love the new O/S dewy settin...</td>\n",
+       "      <td>setting spray</td>\n",
+       "      <td>0.347826</td>\n",
+       "      <td>0.260870</td>\n",
+       "      <td>0.391304</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
        "      <td>10</td>\n",
-       "      <td>Beauty myths</td>\n",
-       "      <td>26</td>\n",
-       "      <td>['I honestly learned something new because I h...</td>\n",
-       "      <td>beauty myths</td>\n",
-       "      <td>0.269231</td>\n",
-       "      <td>0.307692</td>\n",
-       "      <td>0.423077</td>\n",
+       "      <td>Profile bio</td>\n",
+       "      <td>23</td>\n",
+       "      <td>profile message bio send moots collab brand 25...</td>\n",
+       "      <td>[\"Hi there! Your profile is amazing! 💕 We thin...</td>\n",
+       "      <td>profile bio</td>\n",
+       "      <td>0.130435</td>\n",
+       "      <td>0.173913</td>\n",
+       "      <td>0.695652</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>12</td>\n",
-       "      <td>double cleansing</td>\n",
-       "      <td>24</td>\n",
-       "      <td>['Try an oil cleanser, then the gel or foam cl...</td>\n",
-       "      <td>double cleansing</td>\n",
-       "      <td>0.250000</td>\n",
-       "      <td>0.208333</td>\n",
-       "      <td>0.541667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>13</td>\n",
-       "      <td>Korean skincare products</td>\n",
-       "      <td>24</td>\n",
-       "      <td>['Just FYI, Aromatica is Korean, not Japanese....</td>\n",
-       "      <td>korean skincare products</td>\n",
-       "      <td>0.125000</td>\n",
-       "      <td>0.208333</td>\n",
-       "      <td>0.666667</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>14</td>\n",
+       "      <th>7</th>\n",
+       "      <td>11</td>\n",
        "      <td>Cavemen</td>\n",
-       "      <td>20</td>\n",
+       "      <td>21</td>\n",
+       "      <td>water cavemen girl jst grossed realised pollut...</td>\n",
        "      <td>['Yall i swear cavemen probably also did wash ...</td>\n",
        "      <td>cavemen</td>\n",
-       "      <td>0.450000</td>\n",
-       "      <td>0.400000</td>\n",
-       "      <td>0.150000</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.428571</td>\n",
+       "      <td>0.142857</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Morning routine</td>\n",
+       "      <td>20</td>\n",
+       "      <td>routine sleep morning morning routine bed craz...</td>\n",
+       "      <td>['I need to get into this type of routine 😩. I...</td>\n",
+       "      <td>morning routine</td>\n",
+       "      <td>0.300000</td>\n",
+       "      <td>0.050000</td>\n",
+       "      <td>0.650000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Topic                      Name  Count  \\\n",
-       "0      -1             Love skincare    586   \n",
-       "1       0           acne prone skin     54   \n",
-       "2       1                      Asmr     54   \n",
-       "3       2   Instagram collaboration     50   \n",
-       "4       5                 Oily skin     31   \n",
-       "5       6           Sunscreen myths     32   \n",
-       "6       7                 Clay mask     33   \n",
-       "7       8               Serum cream     30   \n",
-       "8       9               Beauty tips     29   \n",
-       "9      10              Beauty myths     26   \n",
-       "10     12          double cleansing     24   \n",
-       "11     13  Korean skincare products     24   \n",
-       "12     14                   Cavemen     20   \n",
+       "   Topic               Name  Count  \\\n",
+       "0     -1               acne    710   \n",
+       "1      2  Shelby foundation     53   \n",
+       "2      3   Double cleansing     41   \n",
+       "3      4        Milky toner     39   \n",
+       "4      6    Beauty products     29   \n",
+       "5      9      Setting spray     23   \n",
+       "6     10        Profile bio     23   \n",
+       "7     11            Cavemen     21   \n",
+       "8     12    Morning routine     20   \n",
        "\n",
-       "                                             Examples  \\\n",
-       "0   [\"Azelaic Acid 15% and Tazarotene Cream .05% f...   \n",
-       "1   ['Hei God! You gave me oily acne-prone skin bu...   \n",
-       "2   ['ASMR has me hooked! What’s your favorite typ...   \n",
-       "3   ['Hi pretty ! 🎀I’m Eliza from SAGAJEWELS marke...   \n",
-       "4   ['This really only works for normal skin types...   \n",
-       "5   [\"I always like to know how things smell. But ...   \n",
-       "6   ['Collagen cannot be absorbed into the skin be...   \n",
-       "7   ['Rhode makes amazing skincare. All their prod...   \n",
-       "8   ['Ich liebe die Creme😍hab die auch.', 'Woher b...   \n",
-       "9   ['I honestly learned something new because I h...   \n",
-       "10  ['Try an oil cleanser, then the gel or foam cl...   \n",
-       "11  ['Just FYI, Aromatica is Korean, not Japanese....   \n",
-       "12  ['Yall i swear cavemen probably also did wash ...   \n",
+       "                                            Keywords  \\\n",
+       "0  skin love acne serum acid hair routine skincar...   \n",
+       "1  makeup rhode live concealer wearing girls cats...   \n",
+       "2  cleanser oil soap wash oil cleanser double cle...   \n",
+       "3  sunscreen milky toner milky spf byoma toner ro...   \n",
+       "4       ich die das und den auch liebe mit mir nicht   \n",
+       "5  spray setting scent setting spray day micellar...   \n",
+       "6  profile message bio send moots collab brand 25...   \n",
+       "7  water cavemen girl jst grossed realised pollut...   \n",
+       "8  routine sleep morning morning routine bed craz...   \n",
        "\n",
-       "                    NormName  negative_share  neutral_share  positive_share  \n",
-       "0              love skincare             NaN            NaN             NaN  \n",
-       "1            acne prone skin        0.574074       0.185185        0.240741  \n",
-       "2                       asmr        0.314815       0.185185        0.500000  \n",
-       "3    instagram collaboration        0.020000       0.180000        0.800000  \n",
-       "4                  oily skin        0.419355       0.387097        0.193548  \n",
-       "5            sunscreen myths        0.375000       0.187500        0.437500  \n",
-       "6                  clay mask        0.393939       0.242424        0.363636  \n",
-       "7                serum cream        0.166667       0.266667        0.566667  \n",
-       "8                beauty tips        0.241379       0.241379        0.517241  \n",
-       "9               beauty myths        0.269231       0.307692        0.423077  \n",
-       "10          double cleansing        0.250000       0.208333        0.541667  \n",
-       "11  korean skincare products        0.125000       0.208333        0.666667  \n",
-       "12                   cavemen        0.450000       0.400000        0.150000  "
+       "                                            Examples           NormName  \\\n",
+       "0  ['I used to use the good molecules serum but I...               acne   \n",
+       "1  ['How does the bubble perform under makeup? ( ...  shelby foundation   \n",
+       "2  ['Try an oil cleanser, then the gel or foam cl...   double cleansing   \n",
+       "3  ['Is it just me or the beauty of joseon sunscr...        milky toner   \n",
+       "4  ['Ich liebe die Creme😍hab die auch.', 'Hat bei...    beauty products   \n",
+       "5  ['You’re going to love the new O/S dewy settin...      setting spray   \n",
+       "6  [\"Hi there! Your profile is amazing! 💕 We thin...        profile bio   \n",
+       "7  ['Yall i swear cavemen probably also did wash ...            cavemen   \n",
+       "8  ['I need to get into this type of routine 😩. I...    morning routine   \n",
+       "\n",
+       "   negative_share  neutral_share  positive_share  \n",
+       "0             NaN            NaN             NaN  \n",
+       "1        0.283019       0.245283        0.471698  \n",
+       "2        0.341463       0.317073        0.341463  \n",
+       "3        0.358974       0.282051        0.358974  \n",
+       "4        0.241379       0.241379        0.517241  \n",
+       "5        0.347826       0.260870        0.391304  \n",
+       "6        0.130435       0.173913        0.695652  \n",
+       "7        0.428571       0.428571        0.142857  \n",
+       "8        0.300000       0.050000        0.650000  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "topic_summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ab4eb549",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hey beautiful🥰 This is Lilia, representing Eelry Jewelry. We love your vibe💞. Let’s chat about something amazing. Shoot me a message💞.\n",
+      "Hey there! I'd love to chat with you about an exciting jewelry collaboration opportunity. Can you send me a message so I can share the details?\n",
+      "Hey there!💞 I'd love to chat with you about an exciting jewelry collaboration opportunity. Can you follow me or send me a message so I can share the details?💌\n"
+     ]
+    }
+   ],
+   "source": [
+    "import ast\n",
+    "\n",
+    "examples_raw = topic_summary[topic_summary[\"Topic\"] == 6][\"Examples\"].iloc[0]\n",
+    "examples = ast.literal_eval(examples_raw)\n",
+    "\n",
+    "for comment in examples:\n",
+    "    print(comment)"
    ]
   },
   {
