--- a/notebooks/topics.ipynb
+++ b/notebooks/topics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "659d1a13",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "8531246b",
    "metadata": {},
    "outputs": [
@@ -58,93 +58,105 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>-1</td>\n",
-       "      <td>acne</td>\n",
-       "      <td>710</td>\n",
-       "      <td>skin love acne serum acid hair routine skincar...</td>\n",
-       "      <td>['I used to use the good molecules serum but I...</td>\n",
-       "      <td>acne</td>\n",
+       "      <td>Love</td>\n",
+       "      <td>647</td>\n",
+       "      <td>love routine skin products night video asmr fe...</td>\n",
+       "      <td>['Love that headband girl! Love a good skin ca...</td>\n",
+       "      <td>love</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Shelby foundation</td>\n",
-       "      <td>53</td>\n",
-       "      <td>makeup rhode live concealer wearing girls cats...</td>\n",
-       "      <td>['How does the bubble perform under makeup? ( ...</td>\n",
-       "      <td>shelby foundation</td>\n",
-       "      <td>0.283019</td>\n",
-       "      <td>0.245283</td>\n",
-       "      <td>0.471698</td>\n",
+       "      <td>0</td>\n",
+       "      <td>acne scars</td>\n",
+       "      <td>64</td>\n",
+       "      <td>acne skin prone acne prone pimples fungal acne...</td>\n",
+       "      <td>['Your skin looks amazing ✨✨✨ what would you r...</td>\n",
+       "      <td>acne scars</td>\n",
+       "      <td>0.625000</td>\n",
+       "      <td>0.171875</td>\n",
+       "      <td>0.203125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Double cleansing</td>\n",
-       "      <td>41</td>\n",
-       "      <td>cleanser oil soap wash oil cleanser double cle...</td>\n",
-       "      <td>['Try an oil cleanser, then the gel or foam cl...</td>\n",
-       "      <td>double cleansing</td>\n",
-       "      <td>0.341463</td>\n",
-       "      <td>0.317073</td>\n",
-       "      <td>0.341463</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Hair</td>\n",
+       "      <td>48</td>\n",
+       "      <td>hair spray setting clean morning sweating scen...</td>\n",
+       "      <td>['I find it blissful for showering in the even...</td>\n",
+       "      <td>hair</td>\n",
+       "      <td>0.458333</td>\n",
+       "      <td>0.187500</td>\n",
+       "      <td>0.354167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
-       "      <td>Milky toner</td>\n",
-       "      <td>39</td>\n",
-       "      <td>sunscreen milky toner milky spf byoma toner ro...</td>\n",
-       "      <td>['Is it just me or the beauty of joseon sunscr...</td>\n",
-       "      <td>milky toner</td>\n",
-       "      <td>0.358974</td>\n",
-       "      <td>0.282051</td>\n",
-       "      <td>0.358974</td>\n",
+       "      <td>Wearing makeup</td>\n",
+       "      <td>41</td>\n",
+       "      <td>makeup rhode concealer wearing foundation girl...</td>\n",
+       "      <td>['I have re-fallen in love with the beauty ind...</td>\n",
+       "      <td>wearing makeup</td>\n",
+       "      <td>0.341463</td>\n",
+       "      <td>0.170732</td>\n",
+       "      <td>0.487805</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Beauty products</td>\n",
-       "      <td>29</td>\n",
-       "      <td>ich die das und den auch liebe mit mir nicht</td>\n",
-       "      <td>['Ich liebe die Creme😍hab die auch.', 'Hat bei...</td>\n",
-       "      <td>beauty products</td>\n",
-       "      <td>0.241379</td>\n",
-       "      <td>0.241379</td>\n",
-       "      <td>0.517241</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Sunscreen</td>\n",
+       "      <td>38</td>\n",
+       "      <td>sunscreen milky toner milky spf toner byoma su...</td>\n",
+       "      <td>['Is it just me or the beauty of joseon sunscr...</td>\n",
+       "      <td>sunscreen</td>\n",
+       "      <td>0.342105</td>\n",
+       "      <td>0.289474</td>\n",
+       "      <td>0.368421</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>9</td>\n",
-       "      <td>Setting spray</td>\n",
-       "      <td>23</td>\n",
-       "      <td>spray setting scent setting spray day micellar...</td>\n",
-       "      <td>['You’re going to love the new O/S dewy settin...</td>\n",
-       "      <td>setting spray</td>\n",
-       "      <td>0.347826</td>\n",
-       "      <td>0.260870</td>\n",
-       "      <td>0.391304</td>\n",
+       "      <td>Love</td>\n",
+       "      <td>30</td>\n",
+       "      <td>ich die und das den auch für mit liebe mir</td>\n",
+       "      <td>['Woher bekomme ich das sogar diese größere se...</td>\n",
+       "      <td>love</td>\n",
+       "      <td>0.266667</td>\n",
+       "      <td>0.233333</td>\n",
+       "      <td>0.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>10</td>\n",
-       "      <td>Profile bio</td>\n",
-       "      <td>23</td>\n",
-       "      <td>profile message bio send moots collab brand 25...</td>\n",
-       "      <td>[\"Hi there! Your profile is amazing! 💕 We thin...</td>\n",
-       "      <td>profile bio</td>\n",
-       "      <td>0.130435</td>\n",
-       "      <td>0.173913</td>\n",
-       "      <td>0.695652</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Double cleansing</td>\n",
+       "      <td>22</td>\n",
+       "      <td>cleanser oil double cleansing oil cleanser cle...</td>\n",
+       "      <td>['Toleriane Purifying Foaming Cleanser every s...</td>\n",
+       "      <td>double cleansing</td>\n",
+       "      <td>0.181818</td>\n",
+       "      <td>0.227273</td>\n",
+       "      <td>0.590909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>11</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Korean skincare</td>\n",
+       "      <td>22</td>\n",
+       "      <td>korean korean skincare skincare korea skin bub...</td>\n",
+       "      <td>['The face shop is my fave Korean skincare bra...</td>\n",
+       "      <td>korean skincare</td>\n",
+       "      <td>0.136364</td>\n",
+       "      <td>0.227273</td>\n",
+       "      <td>0.636364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>14</td>\n",
        "      <td>Cavemen</td>\n",
        "      <td>21</td>\n",
-       "      <td>water cavemen girl jst grossed realised pollut...</td>\n",
+       "      <td>water cavemen girl pollution realised jst gros...</td>\n",
        "      <td>['Yall i swear cavemen probably also did wash ...</td>\n",
        "      <td>cavemen</td>\n",
        "      <td>0.428571</td>\n",
@@ -152,68 +164,72 @@
        "      <td>0.142857</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>12</td>\n",
-       "      <td>Morning routine</td>\n",
+       "      <th>9</th>\n",
+       "      <td>15</td>\n",
+       "      <td>happy mother day</td>\n",
        "      <td>20</td>\n",
-       "      <td>routine sleep morning morning routine bed craz...</td>\n",
-       "      <td>['I need to get into this type of routine 😩. I...</td>\n",
-       "      <td>morning routine</td>\n",
-       "      <td>0.300000</td>\n",
-       "      <td>0.050000</td>\n",
-       "      <td>0.650000</td>\n",
+       "      <td>mom parents happy mother mother day pope chy r...</td>\n",
+       "      <td>[\"I always like to know how things smell. But ...</td>\n",
+       "      <td>happy mother day</td>\n",
+       "      <td>0.350000</td>\n",
+       "      <td>0.200000</td>\n",
+       "      <td>0.450000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Topic               Name  Count  \\\n",
-       "0     -1               acne    710   \n",
-       "1      2  Shelby foundation     53   \n",
-       "2      3   Double cleansing     41   \n",
-       "3      4        Milky toner     39   \n",
-       "4      6    Beauty products     29   \n",
-       "5      9      Setting spray     23   \n",
-       "6     10        Profile bio     23   \n",
-       "7     11            Cavemen     21   \n",
-       "8     12    Morning routine     20   \n",
+       "   Topic              Name  Count  \\\n",
+       "0     -1              Love    647   \n",
+       "1      0        acne scars     64   \n",
+       "2      2              Hair     48   \n",
+       "3      4    Wearing makeup     41   \n",
+       "4      7         Sunscreen     38   \n",
+       "5      9              Love     30   \n",
+       "6     12  Double cleansing     22   \n",
+       "7     13   Korean skincare     22   \n",
+       "8     14           Cavemen     21   \n",
+       "9     15  happy mother day     20   \n",
        "\n",
        "                                            Keywords  \\\n",
-       "0  skin love acne serum acid hair routine skincar...   \n",
-       "1  makeup rhode live concealer wearing girls cats...   \n",
-       "2  cleanser oil soap wash oil cleanser double cle...   \n",
-       "3  sunscreen milky toner milky spf byoma toner ro...   \n",
-       "4       ich die das und den auch liebe mit mir nicht   \n",
-       "5  spray setting scent setting spray day micellar...   \n",
-       "6  profile message bio send moots collab brand 25...   \n",
-       "7  water cavemen girl jst grossed realised pollut...   \n",
-       "8  routine sleep morning morning routine bed craz...   \n",
+       "0  love routine skin products night video asmr fe...   \n",
+       "1  acne skin prone acne prone pimples fungal acne...   \n",
+       "2  hair spray setting clean morning sweating scen...   \n",
+       "3  makeup rhode concealer wearing foundation girl...   \n",
+       "4  sunscreen milky toner milky spf toner byoma su...   \n",
+       "5         ich die und das den auch für mit liebe mir   \n",
+       "6  cleanser oil double cleansing oil cleanser cle...   \n",
+       "7  korean korean skincare skincare korea skin bub...   \n",
+       "8  water cavemen girl pollution realised jst gros...   \n",
+       "9  mom parents happy mother mother day pope chy r...   \n",
        "\n",
-       "                                            Examples           NormName  \\\n",
-       "0  ['I used to use the good molecules serum but I...               acne   \n",
-       "1  ['How does the bubble perform under makeup? ( ...  shelby foundation   \n",
-       "2  ['Try an oil cleanser, then the gel or foam cl...   double cleansing   \n",
-       "3  ['Is it just me or the beauty of joseon sunscr...        milky toner   \n",
-       "4  ['Ich liebe die Creme😍hab die auch.', 'Hat bei...    beauty products   \n",
-       "5  ['You’re going to love the new O/S dewy settin...      setting spray   \n",
-       "6  [\"Hi there! Your profile is amazing! 💕 We thin...        profile bio   \n",
-       "7  ['Yall i swear cavemen probably also did wash ...            cavemen   \n",
-       "8  ['I need to get into this type of routine 😩. I...    morning routine   \n",
+       "                                            Examples          NormName  \\\n",
+       "0  ['Love that headband girl! Love a good skin ca...              love   \n",
+       "1  ['Your skin looks amazing ✨✨✨ what would you r...        acne scars   \n",
+       "2  ['I find it blissful for showering in the even...              hair   \n",
+       "3  ['I have re-fallen in love with the beauty ind...    wearing makeup   \n",
+       "4  ['Is it just me or the beauty of joseon sunscr...         sunscreen   \n",
+       "5  ['Woher bekomme ich das sogar diese größere se...              love   \n",
+       "6  ['Toleriane Purifying Foaming Cleanser every s...  double cleansing   \n",
+       "7  ['The face shop is my fave Korean skincare bra...   korean skincare   \n",
+       "8  ['Yall i swear cavemen probably also did wash ...           cavemen   \n",
+       "9  [\"I always like to know how things smell. But ...  happy mother day   \n",
        "\n",
        "   negative_share  neutral_share  positive_share  \n",
        "0             NaN            NaN             NaN  \n",
-       "1        0.283019       0.245283        0.471698  \n",
-       "2        0.341463       0.317073        0.341463  \n",
-       "3        0.358974       0.282051        0.358974  \n",
-       "4        0.241379       0.241379        0.517241  \n",
-       "5        0.347826       0.260870        0.391304  \n",
-       "6        0.130435       0.173913        0.695652  \n",
-       "7        0.428571       0.428571        0.142857  \n",
-       "8        0.300000       0.050000        0.650000  "
+       "1        0.625000       0.171875        0.203125  \n",
+       "2        0.458333       0.187500        0.354167  \n",
+       "3        0.341463       0.170732        0.487805  \n",
+       "4        0.342105       0.289474        0.368421  \n",
+       "5        0.266667       0.233333        0.500000  \n",
+       "6        0.181818       0.227273        0.590909  \n",
+       "7        0.136364       0.227273        0.636364  \n",
+       "8        0.428571       0.428571        0.142857  \n",
+       "9        0.350000       0.200000        0.450000  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +240,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
+   "id": "cd921561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = topic_summary[topic_summary[\"Topic\"] != 9]\n",
+    "df.to_csv(\"../data/topic_clustering.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "ab4eb549",
    "metadata": {},
    "outputs": [
@@ -232,16 +259,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hey beautiful🥰 This is Lilia, representing Eelry Jewelry. We love your vibe💞. Let’s chat about something amazing. Shoot me a message💞.\n",
-      "Hey there! I'd love to chat with you about an exciting jewelry collaboration opportunity. Can you send me a message so I can share the details?\n",
-      "Hey there!💞 I'd love to chat with you about an exciting jewelry collaboration opportunity. Can you follow me or send me a message so I can share the details?💌\n"
+      "I can’t find your video… where you are feeling sad. I just wanted to tell you… 😳 it’s normal!!!! Life is ups and downs and I truly think adulthood sets in and you realize… man… sometimes life’s not a good time all the time. I wish someone told me when I was living my life fast & full of fun… that when it wears off and you feel like you’re sad and slowing down. You are ok, don’t burn things down. Just breathe, it’s normal!!!\n",
+      "Forgive me God for Lying💔\n",
+      "Forgive me God for Lusting💔\n",
+      "Forgive me God for Lazing💔\n",
+      "Forgive me God for doubting You💔\n",
+      "Forgive me God for ignoring you💔\n",
+      "Amen 🙏 spread the gospel\n",
+      "I love watching these because I’m about to move out with my fiance and we are getting married in October! It’s so nice to watch an influencer go through the same stage of life!! You guys are too cute!\n"
      ]
     }
    ],
    "source": [
     "import ast\n",
     "\n",
-    "examples_raw = topic_summary[topic_summary[\"Topic\"] == 6][\"Examples\"].iloc[0]\n",
+    "examples_raw = topic_summary[topic_summary[\"Topic\"] == 0][\"Examples\"].iloc[0]\n",
     "examples = ast.literal_eval(examples_raw)\n",
     "\n",
     "for comment in examples:\n",
